--- a/Meta Analysis/LDL-Changes.Rmd
+++ b/Meta Analysis/LDL-Changes.Rmd
@@ -49,7 +49,7 @@ Evaluated studies where ketogenic diets (<25g/day of CHO) are used and weight an
 # Raw Data
 
 Reviewed data from the Choi *et al* meta-analysis (http://dx.doi.org/10.3390/nu12072005), pulling in data on baseline weight, weight changes, LDL, LDL changes and standard deviations.
-#need more details added here --> how did we find other studies (literature search for all studies using a KD diet that met our inclusion criteria, most recently updated this search on (whatever date is most up to date))
+#need more details added here --> how did we find other studies (literature search for all studies using a KD diet that met our inclusion criteria, most recently updated this search on (whatever date is most up to date)) --> A systematic literature search of Embase, PubMed, and Cochrane Library was performed to identify randomized controlled trials (RCTs) and single-arm interventions of patients that evaluated the effects of a ketogenic diet on glycemic control, weight loss, and lipid profile as primary endpoints. all studies using a KD diet that met our inclusion criteria xxx . most recently updated this search on (whatever date is most up to date))
 
 ```{r data-input}
 library(readxl) #loads the readr package
