--- a/Meta Analysis/LDL-Changes.Rmd
+++ b/Meta Analysis/LDL-Changes.Rmd
@@ -8,6 +8,8 @@ output:
     keep_md: yes
     number_sections: yes
     toc: yes
+  pdf_document:
+    toc: yes
 ---
 
 ```{r global_options, include=FALSE}
