Update to methods section

--- a/Meta Analysis/LDL-Changes.Rmd
+++ b/Meta Analysis/LDL-Changes.Rmd
@@ -55,7 +55,7 @@ Reviewed data from the Choi *et al* meta-analysis (http://dx.doi.org/10.3390/nu1
 We used a value 130mg/dL of LDL-C at baseline to stratify individuals as being hypercholesterolemic or not.
 
 
-Correlations in this meta-analysis before and after the administration of the ketogenic diet were analyzed with linear models and results given using pearsons correlation coefficient. p-values were estimated from 2-sided tests and considered statistically significant when below 0.05. 
+Correlations in this meta-analysis before and after the administration of the ketogenic diet were analyzed with linear models and results given using pearsons correlation coefficient, statistical significance was defined as below 0.05. 
 
 ```{r data-input}
 library(readxl) #loads the readr package
